# lab-seabot-ros

./: README.md
src/animation/: package.xml  setup.cfg  setup.py
src/animation/animation/: animation.py
src/depth_filter/: CMakeLists.txt  package.xml
src/depth_filter/include/depth_filter/: depth_filter.hpp  depth_filter_node.hpp
src/depth_filter/src/: depth_filter.cpp  depth_filter_node.cpp
src/seabot/: CMakeLists.txt  package.xml
src/seabot/config/: robot.yaml
src/seabot/launch/: simulation_launch.py
src/seabot_msgs/: CMakeLists.txt  package.xml
src/seabot_msgs/msg/: PistonSetpoint.msg  SimulationState.msg
src/simulation/: CMakeLists.txt  package.xml
src/simulation/include/simulation/: simulation.hpp  simulation_node.hpp
src/simulation/src/: simulation.cpp  simulation_node.cpp
